started shop section

--- a/index.html
+++ b/index.html
@@ -20,14 +20,16 @@
                 <div class="logo">
                     <img src="/assets/Adidas_Logo.svg.png">
                 </div>
-                <div id="link"></div>
-                    <a href="" class=""><i class="fa fa-store "></i></a>
-                    <a href=""><i class="fa fa-shoe-prints "></i></i></a>
-                    <a href=""><i class="fa fa-shirt "></i></a>
-                    <a href=""><i class="fa fa-heart "></i></a>
-                </nav>
+                <div class="main-nav d-flex h-center">
+                    <div id="link"></div>
+                        <a href="shop.html" ><i class="fa fa-store "></i></a>
+                        <a href="index.html" class="active"><i class="fa fa-shoe-prints "></i></i></a>
+                        <a href=""><i class="fa fa-shirt "></i></a>
+                        <a href=""><i class="fa fa-heart "></i></a>
+                    </nav>
+                </div>    
                
-                <div class="d-flex h-center">
+                <div class="sec-nav d-flex h-center">
                     <nav >
                         <a href=""><i class="fa fa-basket-shopping "></i></a>
                         <a href=""><i class="fa fa-magnifying-glass "></i></a>
