pretty much end

--- a/shop.html
+++ b/shop.html
@@ -68,11 +68,67 @@
                         <a href="#" class="gray">Sort by <i class="fa-solid fa-chevron-down"></i></a>
                     </div>
                 </div>
-            <div class="itemgrid">
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
+            <div class="itemgrid productgrid">
+                <div class="product ">
+                    <div class="shop-icons">
+                        <a href=""><i class="fa fa-cart-plus"></i></a>
+                        <a href=""><i class="fa-regular fa-thumbs-up"></i></a>
+                        <a href=""><i class="fa-regular fa-message "></i></a>
+                    </div>
+                    <div>
+                        <h3>Gucci Sandals</h3>
+                        <p>Collection by Ye West</p>
+                    </div>
+                    <h3>250€</h3>
+                    <div class="productimg">
+                        <a href=""> <img src="/assets/ye.png" alt=""></a>
+                    </div>
+                </div>
+                <div class="product ">
+                    <div class="shop-icons">
+                        <a href=""><i class="fa fa-cart-plus"></i></a>
+                        <a href=""><i class="fa-regular fa-thumbs-up"></i></a>
+                        <a href=""><i class="fa-regular fa-message "></i></a>
+                    </div>
+                    <div>
+                        <h3>Gucci Sandals</h3>
+                        <p>Collection by Ye West</p>
+                    </div>
+                    <h3>250€</h3>
+                    <div class="productimg">
+                        <a href=""> <img src="/assets/ye.png" alt=""></a>
+                    </div>
+                </div>  
+                <div class="product ">
+                    <div class="shop-icons">
+                        <a href=""><i class="fa fa-cart-plus"></i></a>
+                        <a href=""><i class="fa-regular fa-thumbs-up"></i></a>
+                        <a href=""><i class="fa-regular fa-message "></i></a>
+                    </div>
+                    <div>
+                        <h3>Gucci Sandals</h3>
+                        <p>Collection by Ye West</p>
+                    </div>
+                    <h3>250€</h3>
+                    <div class="productimg">
+                        <a href=""> <img src="/assets/ye.png" alt=""></a>
+                    </div>
+                </div>  
+                <div class="product ">
+                    <div class="shop-icons">
+                        <a href=""><i class="fa fa-cart-plus"></i></a>
+                        <a href=""><i class="fa-regular fa-thumbs-up"></i></a>
+                        <a href=""><i class="fa-regular fa-message "></i></a>
+                    </div>
+                    <div>
+                        <h3>Gucci Sandals</h3>
+                        <p>Collection by Ye West</p>
+                    </div>
+                    <h3>250€</h3>
+                    <div class="productimg">
+                        <a href=""> <img src="/assets/ye.png" alt=""></a>
+                    </div>
+                </div>   
             </div>
            </div>
         </div>
